Use new Java 21 functionality